Added a gradle plugin to bundle up project into a prod one.